Resolves: tdf#130484 controls become disabled on click final checkboxes

they always triggered disabled the current state in the roadmap, but disabling
a roadmap step now really disables the associated window in vcl.

These two particular toggles don't actually affect the current roadmap state,
so don't call state-modified when changing them.

That doesn't change the ye-old weird case that the logical state of this final
step is disabled, but don't let the wizard find that out when toggling
radiobuttons that don't contribute to the roadmap state

Change-Id: I5927d20ea461a294e76014892c90ad0b5f39fb6c